# kofola

./: AUTHORS  CMakeLists.txt  Makefile  Makefile.am  README.md  sanity-check-file.sh  sanity-check.sh
.github/workflow/: ubuntu.yml
.github/workflows/: build.yml  macos.yml  ubuntu.yml
hyperltl_benchmarks/: bp_programs.txt  planning_instances.txt  run_bp.py  run_planning.py  run_symbolic.py  symbolic_instances.txt  tmp.hoa
hyperltl_benchmarks/bp/: concur_p1_4bit.hoa  concur_p4_3bit.hoa  gni.txt  lmcs_p1_1bit.hoa  lmcs_p2_4bit.hoa  lmcs_p3_3bit.hoa  lmcs_p4_3bit.hoa
hyperltl_benchmarks/planning/: robotic_robustness_100.hoa  robotic_robustness_1600.hoa  robotic_robustness_3600.hoa  robotic_robustness_400.hoa  robotic_robustness_formula.hq  robotic_sp_100.hoa  robotic_sp_1600.hoa  robotic_sp_3600.hoa  robotic_sp_formula.hq
hyperltl_benchmarks/symbolic/bakery/: bakery_3procs.hoa  bakery_5procs.hoa  bakery_formula_S3_3proc.hq  bakery_formula_sym1_3proc.hq  bakery_formula_sym2_3proc.hq
hyperltl_benchmarks/symbolic/mutation/: mutation_testing.hoa  mutation_testing.hq
hyperltl_benchmarks/symbolic/ni/: NI_correct.hoa  NI_formula.hq  NI_incorrect.hoa
hyperltl_benchmarks/symbolic/nrp/: NRP_correct.hoa  NRP_formula.hq  NRP_incorrect.hoa
hyperltl_benchmarks/symbolic/snark/: snark1_M1_concurrent.hoa  snark1_M2_sequential.hoa  snark1_formula.hq
hyperltl_ex/bp/: concur_p2_1bit.hoa  concur_p3_1bit.hoa
hyperltl_ex/planning/: robotic_robustness_1600.hoa  robotic_robustness_3600.hoa  robotic_robustness_400.hoa  robotic_sp_400.hoa
hyperltl_ex/symbolic/bakery/: bakery_3procs.hoa  bakery_formula_S1_3proc.hq  bakery_formula_S2_3proc.hq  bakery_formula_S3_3proc.hq  bakery_formula_sym1_5pro.hoa  bakery_formula_sym1_5proc.hq  bakery_formula_sym2_5proc.hq
hyperltl_ex/symbolic/mutation/: mutation_testing.hq
hyperltl_ex/symbolic/ni/: NI_correct.hoa
hyperltl_ex/symbolic/nrp/: NRP_correct.hoa  NRP_incorrect.hoa
hyperltl_ex/symbolic/snark/: snark1_M1_concurrent.hoa
misc/: header.cpp
src/: CMakeLists.txt  abstract_complement_alg.cpp  abstract_complement_alg.hpp  abstract_successor.cpp  abstract_successor.hpp  complement_alg_init_det.cpp  complement_alg_init_det.hpp  complement_alg_mh.cpp  complement_alg_mh.hpp  complement_alg_ncsb.cpp  complement_alg_ncsb.hpp  complement_alg_ncsb_delay.cpp  complement_alg_ncsb_delay.hpp  complement_alg_rank.cpp  complement_alg_rank.hpp  complement_alg_rank2.cpp  complement_alg_rank2.hpp  complement_alg_safra.cpp  complement_alg_safra.hpp  complement_alg_subs_tuple.cpp  complement_alg_subs_tuple.hpp  complement_class.cpp  complement_class.hpp  complement_mh.hpp  complement_mstate.hpp  complement_ncsb.cpp  complement_ncsb.hpp  complement_rank.hpp  complement_sync.cpp  complement_sync.hpp  complement_tela.cpp  complement_tela.hpp  complement_tnba.cpp  composer.hpp  dataflow.hpp  decomposer.cpp  decomposer.hpp  determinize.cpp  determinize.hpp  determinize_teba.cpp  (+27 more)
test_script/: test.sh
